pyroscope (0.3.6) hardy; urgency=low

  * lstor: Added "-o" option to select output fields
  * rtcontrol: Print XMLRPC statistics when in verbose mode
  * rtcontrol: Added field "kind" as a taglist
  * rtxmlrpc: Added --repr option

 -- pyroscope <pyroscope.project@gmail.com>  Wed, 25 Aug 2010 21:06:32 +0200

pyroscope (0.3.5) hardy; urgency=low

  * rtcontrol: Added "tagged" field and "--tag" option to set them
  * rtcontrol: Added "views" field that uses the TaggedAsFilter for selection
  * rtcontrol: All named custom attributes are available as "custom_NAME"
  * rtcontrol: Added --column-headers option
  * Configurable output formats added ("rtcontrol -o format_name")
  * Added "--define KEY=VAL" to override configuration attributes, e.g.
    to connect to another rtorrent instance via "-D rtorrent_rc=..."
  * Output formatting: system field "now" and format spec ".iso" for dates
  * xmlrpc-c is now checked for 64 bit support when connecting

 -- pyroscope <pyroscope.project@gmail.com>  Fri, 20 Aug 2010 20:56:49 +0200

pyroscope (0.3.4) hardy; urgency=low

  * Note that some new features need special entries in .rtorrent.rc, so read
    http://code.google.com/p/pyroscope/wiki/UserConfiguration before updating
  * chtor: --comment, --bump-date, and --no-date added
  * chtor: dropped --force, and replaced it by --reannounce-all
  * chtor: takes alias names for announe URLs now
  * rtcontrol: added machinery to allow custom field definitions
  * rtcontrol: --help-fields added
  * rtcontrol: interactive mode added (-i, --yes)
  * rtcontrol: --ignore=0|1 added (to set 'ignore commands' flag)
  * rtcontrol: added fields "is_ignored" and "is_active"
  * rtcontrol: added field "directory" (which unlike "path" won't be empty)
  * rtcontrol: --flush added
  * rtcontrol: --delete added
  * rtcontrol: --throttle=NAME and "throttle" field added
  * rtcontrol: added fields "loaded" and "completed"